--- a/Modelo-Mestrado-PROCC.tex
+++ b/Modelo-Mestrado-PROCC.tex
@@ -32,43 +32,43 @@
 % ----------------------------------------------------------
 \pretextual
 
-\titulo{Utilizando Algoritmos Mágicos para Resolver Problemas de Bancos de dados Obscuros em Nuvens Cumulonimbus}
-\autor{Arnold Schwarzenegger da Silva}
-\orientador{Andrew S. Tanenbaum}
-\coorientador{Donald Knuth}
+\titulo{Arquitetura de otimização para internet das Coisas}
+\autor{Danilo Souza Silva}
+\orientador{Admilson de Ribamar Lima Ribeiro}
+%\coorientador{Donald Knuth}
 \curso{Ciência da Computação}
 
 \imprimircapa
 \imprimirfolhaderosto*
 
-\imprimirfichacatalografica
-\imprimirfolhadeaprovacao
+%\imprimirfichacatalografica
+%\imprimirfolhadeaprovacao
     
-\include{Pre_Textual/Dedicatoria}
-\include{Pre_Textual/Agradecimentos}
-\include{Pre_Textual/Epigrafe}
+%\include{Pre_Textual/Dedicatoria}
+%\include{Pre_Textual/Agradecimentos}
+%\include{Pre_Textual/Epigrafe}
 \include{Pre_Textual/Resumo}
-\include{Pre_Textual/Abstract}
+%\include{Pre_Textual/Abstract}
     
 % Lista de Figuras
-\pdfbookmark[0]{\listfigurename}{lof}
-\listoffigures*
-\cleardoublepage
+%\pdfbookmark[0]{\listfigurename}{lof}
+%\listoffigures*
+%\cleardoublepage
 
 % Lista de Tabelas
-\pdfbookmark[0]{\listtablename}{lot}
-\listoftables*
-\cleardoublepage
+%\pdfbookmark[0]{\listtablename}{lot}
+%\listoftables*
+%\cleardoublepage
 
 % Lista de Códigos
-\pdfbookmark[0]{\listlistingname}{lol}
-\begin{KeepFromToc}
-	\listoflistings
-\end{KeepFromToc}
-\cleardoublepage
+%\pdfbookmark[0]{\listlistingname}{lol}
+%\begin{KeepFromToc}
+%	\listoflistings
+%\end{KeepFromToc}
+%\cleardoublepage
    
-\include{Pre_Textual/Abreviaturas}
-\include{Pre_Textual/Simbolos}
+%\include{Pre_Textual/Abreviaturas}
+%\include{Pre_Textual/Simbolos}
     
 \pdfbookmark[0]{\contentsname}{toc}
 \tableofcontents*
@@ -79,7 +79,9 @@
 % ----------------------------------------------------------
 \textual
 \include{Conteudo/Introducao}
+\include{Conteudo/FundamentacaoTeorica}
 \include{Conteudo/TrabalhosRelacionados}
+\include{Conteudo/Desenvolvimento}
 \include{Conteudo/Conclusao}
 
 \bibliography{Bibliografia}
@@ -91,7 +93,7 @@
 
 \renewcommand{\chapnumfont}{\chaptitlefont}
 \renewcommand{\afterchapternum}{}
-\include{Pos_Textual/Apendices}
-\include{Pos_Textual/Anexos}
+%\include{Pos_Textual/Apendices}
+%\include{Pos_Textual/Anexos}
 
 \end{document}
