--- a/Mestrado.sty
+++ b/Mestrado.sty
@@ -1,7 +1,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% CAPA
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\tipotrabalho{Dissertação de Mestrado}
+%\tipotrabalho{Dissertação de Mestrado}
 
 \instituicao{%
   UNIVERSIDADE FEDERAL DE SERGIPE
@@ -10,7 +10,7 @@
   \par
   PROGRAMA DE PÓS-GRADUAÇÃO EM CIÊNCIA DA COMPUTAÇÃO}
   
-\preambulo{Dissertação de Mestrado apresentada ao Programa de Pós-Graduação em Ciência da Computação da Universidade Federal de Sergipe como requisito parcial para a obtenção do título de mestre em \imprimircurso.}
+\preambulo{Proposta de Dissertação de Mestrado apresentada ao Programa de Pós-Graduação em Ciência da Computação da Universidade Federal de Sergipe como requisito parcial para a obtenção do título de mestre em \imprimircurso.}
 
 \newcommand{\imprimirlogo}{
     \centering  \includegraphics[scale=0.3]{Imagens/logo_procc} 
